--- a/templates/delete.html
+++ b/templates/delete.html
@@ -1,7 +1,7 @@
 {% extends "bootstrap/base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Home Page{% endblock %}
+{% block title %}Delete Cafe{% endblock %}
 
 {% block styles %}
 {{ super() }}
@@ -10,7 +10,7 @@
 
 {% block content %}
     <div class="container">
-        <h1>Add your cafe to the database</h1>
+        <h1>Delete Cafe from the database</h1>
 
         {{ wtf.quick_form(form) }}
 
